Add echo chat with websocket
